# ft_printf

./: ft_printf.c
clion_ft_printf/: CMakeLists.txt  a.out  ft_printf.c  ft_printf.h  main.c
dump/clion_ft_printf/: CMakeLists.txt  format_csp5.c  format_du.c  ft_printf.h  main.c
dump/dump/: etc.c  proc_sign.c
dump/dump/렝스고치다망함/: CMakeLists.txt  format_0.c  format_cs5.c  format_d.c  format_p.c  format_u.c  format_x.c  ft_printf.c  ft_printf.h  initializers.c  main.c
dump/original/: Makefile  a.out  main.c
dump/refactored/: Makefile  ft_printf.h
ft_printf/: CMakeLists.txt  Makefile  bonus.c  format_0.c  format_cs5.c  format_csp5.c  format_d.c  format_du.c  format_p.c  format_u.c  format_x.c  format_x0.c  ft_atoi.c  ft_bzero.c  ft_printf.c  ft_printf.h  initializers.c  main.c  proc_sign.c  utils.c
ft_printf/dump/: etc.c  proc_sign.c
not_refactored/: format_0.c  format_cs5.c  format_d.c  format_x.c  ft_printf.c
original/: bonus.c  ft_printf.c  ft_printf.h
testfield/: CMakeLists.txt  format_u.c  format_x.c  initializers.c  main.c
